# trying

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: trying.rs
examples/: graphemes.rs  iterator.rs
src/: iterator.rs  lib.rs  trie.rs
