[package]
name = "trying"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
itertools = "0.10"
rand = "0.8"
unicode-segmentation = "1.8"

[[bench]]
name = "trying"
harness = false
